[gd_scene load_steps=5 format=3 uid="uid://dwqfijnsdx1vw"]

[ext_resource type="Script" uid="uid://b4nug3hjyvil1" path="res://components/floatingMenu/floating_menu.gd" id="1_ord3y"]
[ext_resource type="Script" uid="uid://co2oftxv8j6dw" path="res://components/floatingMenu/panel_grid.gd" id="2_rwxnc"]
[ext_resource type="Script" uid="uid://dxkt0ho223qu4" path="res://components/floatingMenu/other_submenu.gd" id="3_d46hq"]
[ext_resource type="Script" uid="uid://j01t7u5h4b3o" path="res://components/floatingMenu/animation.gd" id="4_pybsn"]

[node name="FloatingMenu" type="Window" node_paths=PackedStringArray("panel", "panelSelector", "panelGrid")]
disable_3d = true
title = "menu"
initial_position = 1
size = Vector2i(1920, 1050)
wrap_controls = true
always_on_top = true
exclude_from_capture = true
max_size = Vector2i(1920, 1080)
script = ExtResource("1_ord3y")
panel = NodePath("Control/PanelContainer")
panelSelector = NodePath("Control/PanelContainer/TabContainer/Panels/panelSelector")
panelGrid = NodePath("Control/PanelContainer/TabContainer/Panels/PanelGrid")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_right = 112.0
offset_bottom = 104.0

[node name="TabContainer" type="TabContainer" parent="Control/PanelContainer"]
layout_mode = 2
current_tab = 3

[node name="___" type="Control" parent="Control/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Panels" type="VBoxContainer" parent="Control/PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="editToggle" type="CheckButton" parent="Control/PanelContainer/TabContainer/Panels"]
layout_mode = 2
text = "Toggle Edit mode"

[node name="panelSelector" type="OptionButton" parent="Control/PanelContainer/TabContainer/Panels"]
layout_mode = 2

[node name="PanelGrid" type="GridContainer" parent="Control/PanelContainer/TabContainer/Panels" node_paths=PackedStringArray("panelSelector", "editToggle")]
layout_mode = 2
columns = 3
script = ExtResource("2_rwxnc")
panelSelector = NodePath("../panelSelector")
editToggle = NodePath("../editToggle")

[node name="Panel" type="Panel" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="up" type="Button" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "up"

[node name="Panel2" type="Panel" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="left" type="Button" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "left"

[node name="Panel3" type="Panel" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="right" type="Button" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "right"

[node name="Panel4" type="Panel" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="down" type="Button" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "down"

[node name="Panel5" type="Panel" parent="Control/PanelContainer/TabContainer/Panels/PanelGrid"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Other" type="VBoxContainer" parent="Control/PanelContainer/TabContainer" node_paths=PackedStringArray("orthoBtn", "fetchWindowListBtn")]
visible = false
layout_mode = 2
script = ExtResource("3_d46hq")
orthoBtn = NodePath("ortho")
fetchWindowListBtn = NodePath("fetchList")
metadata/_tab_index = 2

[node name="ortho" type="CheckButton" parent="Control/PanelContainer/TabContainer/Other"]
layout_mode = 2
text = "orthogonal"

[node name="fetchList" type="Button" parent="Control/PanelContainer/TabContainer/Other"]
layout_mode = 2
text = "Fetch window List"

[node name="Animation" type="VBoxContainer" parent="Control/PanelContainer/TabContainer" node_paths=PackedStringArray("prepareBtn", "startBtn", "finishBtn", "brbBtn")]
layout_mode = 2
script = ExtResource("4_pybsn")
prepareBtn = NodePath("Button")
startBtn = NodePath("Button2")
finishBtn = NodePath("Button3")
brbBtn = NodePath("CheckButton")
metadata/_tab_index = 3

[node name="Button" type="Button" parent="Control/PanelContainer/TabContainer/Animation"]
layout_mode = 2
text = "Prepare start"

[node name="Button2" type="Button" parent="Control/PanelContainer/TabContainer/Animation"]
layout_mode = 2
text = "Start start"

[node name="Button3" type="Button" parent="Control/PanelContainer/TabContainer/Animation"]
layout_mode = 2
text = "finish start"

[node name="CheckButton" type="CheckButton" parent="Control/PanelContainer/TabContainer/Animation"]
layout_mode = 2
text = "BRB"

[connection signal="resized" from="Control/PanelContainer" to="." method="_on_panel_container_resized"]
[connection signal="button_up" from="Control/PanelContainer/TabContainer/Panels/PanelGrid/up" to="Control/PanelContainer/TabContainer/Panels/PanelGrid" method="_on_up_button_up"]
[connection signal="button_up" from="Control/PanelContainer/TabContainer/Panels/PanelGrid/left" to="Control/PanelContainer/TabContainer/Panels/PanelGrid" method="_on_left_button_up"]
[connection signal="button_up" from="Control/PanelContainer/TabContainer/Panels/PanelGrid/right" to="Control/PanelContainer/TabContainer/Panels/PanelGrid" method="_on_right_button_up"]
[connection signal="button_up" from="Control/PanelContainer/TabContainer/Panels/PanelGrid/down" to="Control/PanelContainer/TabContainer/Panels/PanelGrid" method="_on_down_button_up"]
